--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
-Flask~=2.3.2
+blinker==1.6.2
+click==8.1.6
+colorama==0.4.6
+Flask==2.3.2
+Flask-DebugToolbar==0.13.1
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+greenlet==2.0.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+Pillow==10.0.0
+psycopg2==2.9.7
+pypng==0.20220715.0
+qrcode==7.4.2
+SQLAlchemy==2.0.19
+typing_extensions==4.7.1
+Werkzeug==2.3.6
+WTForms==3.0.1
